<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide_radion_button">Glide - Image Loading Library by Bump Tech</string>
    <string name="load_app_radion_button">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_app_radion_button">Retrofit - Type-safe HTTP client for Android and java by Square, Inc</string>

    <string name="button_text">Download</string>
    <string name="button_text_loading">We are Loading</string>

    <string name="empty_selected">Please select an option for download</string>
    <string name="filename">FileName</string>
    <string name="download_status">Download Status</string>
    <string name="back">Back</string>
    <string name="file_name">File Name</string>

</resources>
